fixes inconsistent selection schemes in HTML tables; b=261385, r=Neil, sr=roc